# flintc

./: .clang-format  .gitattributes  .gitignore  Architecture.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  build.zig  build.zig.zon  compile.sh  compile_flags.txt  debug.hpp  library.ft  shell.nix  test.c  test.ft  tests.hpp
.fip/config/: fip-c.toml
.fip/modules/: fip-c
cmake/: CMakeLists.linux.txt  CMakeLists.windows.txt  toolchain-linux.cmake  toolchain-mingw64.cmake
documents/: Architecture.md
error/: error.cpp  error.hpp
examples/: README.md  example_tests.ft  test_projects.ft  tests.ft  utils.ft
examples/aoc/: README.md
examples/aoc/2025/: README.md  test.ft
examples/fsh/: README.md  main.ft  utils.ft
examples/non-working/: callables.ft  fn_composition.ft  game.ft  optionals.ft
examples/pong/: README.md  data.ft  main.ft
examples/pong-2.0/: README.md  ball.ft  collisions.ft  main.ft  player.ft  raylib.ft
examples/pong-3.0/: README.md  ball.ft  collisions.ft  cpu.ft  main.ft  paddle.ft  player.ft  raylib.ft
examples/pong-4.0/: README.md  ball.ft  collisions.ft  cpu.ft  main.ft  paddle.ft  player.ft
examples/tests/: spec.ft  wiki.ft
examples/tests/perf/: DurationList.ft  README.md  fetch.sh  main.ft  perf.ft
examples/tests/spec/: tests.ft
fls/: CMakeLists.txt  README.md  build.sh
fls/include/: lsp_server.hpp
fls/src/: completion.cpp  completion_data.cpp  lsp_protocol.cpp  lsp_server.cpp  main.cpp
include/: assert.hpp  cli_parser.hpp  cli_parser_base.hpp  cli_parser_main.hpp  colors.hpp  debug.hpp  fip.hpp  globals.hpp  io.hpp  linker_interface.hpp  parallel.hpp  persistent_thread_pool.hpp  profiler.hpp  single_executor_guard.hpp  tests.hpp  thread_pool.hpp  types.hpp
include/analyzer/: analyzer.hpp
include/checker/: checker.hpp
include/error/: diagnostics.hpp  error.hpp  error_type.hpp
include/error/error_types/: base_error.hpp  err_lexing.hpp  err_parsing.hpp
include/generator/: generator.hpp
include/lexer/: builtins.hpp  lexer.hpp  lexer_utils.hpp  token.hpp  token_context.hpp
include/linker/: linker.hpp
include/matcher/: alternative_matcher.hpp  balanced_matcher.hpp  balanced_until_matcher.hpp  balanced_valid_until_matcher.hpp  matcher.hpp  negative_lookahead_matcher.hpp  not_matcher.hpp  not_preceded_by_matcher.hpp  repetition_matcher.hpp  sequence_matcher.hpp  token_pattern_matcher.hpp  token_type_anytoken.hpp  token_type_matcher.hpp  until_matcher.hpp
include/parser/: ap_float.hpp  ap_int.hpp  entity_dispatch_graph.hpp  hash.hpp  line.hpp  object_dispatch_graph.hpp  parser.hpp  signature.hpp  test_parser.hpp  test_signature.hpp
include/parser/ast/: annotation_node.hpp  ast_node.hpp  call_node_base.hpp  callable_call_node_base.hpp  file_node.hpp  instance_call_node_base.hpp  namespace.hpp  program_node.hpp  scope.hpp  switch_base.hpp  unary_op_base.hpp
include/parser/type/: alias_type.hpp  array_type.hpp  data_type.hpp  entity_type.hpp  enum_type.hpp  error_set_type.hpp  fn_type.hpp  func_type.hpp  group_type.hpp  interface_type.hpp  multi_type.hpp  object_type.hpp  opaque_type.hpp  optional_type.hpp  pointer_type.hpp  primitive_type.hpp  range_type.hpp  simple_type.hpp  tuple_type.hpp  type.hpp  unknown_type.hpp  variant_type.hpp  vector_type.hpp
include/resolver/: resolver.hpp  resource_lock.hpp
lexer/: lexer.cpp
linker/: linker.cpp  linker.hpp
llvm/: Readme.md  llvm.nix
lsp/: .gitignore  CMakeLists.txt  README.md  build.sh
lsp/include/: completion_data.hpp  lsp_protocol.hpp  lsp_server.hpp
lsp/src/: completion.cpp  completion_data.cpp  lsp_protocol.cpp  lsp_server.cpp  main.cpp
parser/: parser.cpp  parser.hpp
parser/ast/: ast_node.hpp
parser/ast/definitions/: entity_node.hpp  func_node.hpp  function_node.hpp  link_node.hpp  opt_node.hpp
parser/ast/expressions/: binary_op_node.hpp  call_node.hpp  (+2 more)
scripts/: .gitignore  build.sh  profile.sh
src/: analyzer.cpp  base_error.cpp  checker.cpp  debug.cpp  debug.hpp  error.cpp  fip.cpp  generator.cpp  lexer.cpp  linker.cpp  linker_interface.cpp  main.cpp  matcher.cpp  parser.cpp  profiler.cpp  resolver.cpp  signature.cpp  test_utils.hpp  tests.cpp  tests.hpp  tests.zig  types.hpp
src/error/: base_error.cpp  err_expr_call_of_undefined_function.cpp  error.cpp  error_type.hpp
src/generator/: generator.cpp  generator_allocation.cpp  generator_arithmetic.cpp  generator_array.cpp  generator_builtin.cpp  generator_debug.cpp  generator_error.cpp  generator_expression.cpp  generator_function.cpp  generator_ir.cpp  generator_logical.cpp  generator_memory.cpp  generator_module.cpp  generator_statement.cpp  generator_string.cpp  generator_typecast.cpp
src/lexer/: lexer.cpp  lexer.hpp  test_lexer.hpp  token.hpp  token_context.hpp
src/linker/: linker.cpp  linker.hpp
src/parser/: error_node.cpp  file_node.cpp  link_node.cpp  namespace.cpp  parser.cpp  parser.hpp  parser_definition.cpp  parser_expression.cpp  parser_statement.cpp  parser_util.cpp  scope.cpp  signature.cpp  signature.hpp  test_parser.hpp  test_signature.hpp  type.cpp
test_files/: add.ft  assert.ft  callables.ft  divide.ft  extern.h  fn_composition.ft  game.ft  hello.h  imported.ft  imported_2.ft  library.ft  list.ft  mult.ft  multifile.ft  opt_chain.ft  small_multi.ft  small_multi_1.ft  test.ft  test_array.ft  test_data.ft  test_error.ft  test_minimal.ft  test_minimal_2.ft  test_multi_types.ft  test_str.ft  test_tests.ft  vec.ft  wiki_tests.ft
test_files/subdir/: test_subdir.ft
test_files/tests/: array.ft  assert.ft  async.ft  data.ft  enum.ft  error.ft  loops.ft  multi_types.ft  optional.ft  read.ft  str.ft  switch.ft  variant.ft
test_files/wiki_tests/: utils.ft
tests/: cli_parser_tests.hpp  result.hpp  test_utils.hpp  tests.cpp  tests_cli_parser.hpp
tests/fuzzy/: test_fuzzy.hpp  type_name_generator.hpp
tests/lexer/: test_lexer.hpp
tests/parser/: test_parser.hpp
tests/performance/: test_performance.hpp
tests/signature/: balanced_range_extraction_tests.hpp  balanced_range_extraction_vec_tests.hpp  test_signature.hpp
xml2/: Readme.md  xml2.nix
(+823 files in other folders)
